# bakaman

szkielet4/: CMakeLists.txt  beka2.tga  beka3.tga  camera.cpp  font_fshader.txt  font_vshader.txt  fshader.txt  ghost.cpp  ghost.h  main.map  main_file.cpp  map.cpp  map.h  obj_loader.cpp  obj_loader.h  object.cpp  object.h  other.h  pacman.cpp  pacman.h  shaderprogram.cpp  szkielet4.vcxproj  szkielet4.vcxproj.filters  text_renderer.cpp  text_renderer.h  tga.cpp  tga.h  vshader.txt
szkielet4/GL/: freeglut_std.h
